# E4C-Online

./: .gitignore  CMakeLists.txt  LICENSE  README.md  cmake_update.py  generate.bat  imgui.ini  re_generate.bat
Data/Model/Cube/: Cube.fbx
Data/Model/Enemy/: character_skeleton_minion.gltf  character_skeleton_warrior.gltf
Data/Model/Map/: Map001.collider.glb  TitleMap.glb
Data/Shader/: BloomPS.cso  ColorGradingPS.cso  DebugPS.cso  DebugVS.cso  DefaultModelPS.cso  DefaultModelVS.cso  FinalpassPS.cso  FullScreenQuadVS.cso  GaussianBlurPS.cso  GizmosPS.cso  GizmosVS.cso  LambertPS.cso  LambertVS.cso  LinePS.cso  LineVS.cso  LuminanceExtractionPS.cso  MaskPS.cso  PhongPS.cso  PhongVS.cso  ShadowMapVS.cso  SkydomePS.cso  SkydomeVS.cso  SpritePS.cso  SpriteVS.cso  ToonPS.cso  ToonVS.cso  UVScrollPS.cso
Source/: Framework.cpp  Framework.h  GameData.cpp  GameData.h  Main.cpp  Manager.h  PlayerCharacterData.cpp  PlayerCharacterData.h  PlayerCharacterPattern.cpp  PlayerCharacterPattern.h  PreloadManager.cpp  PreloadManager.h
Source/GameObject/: GameObject.cpp  GameObject.h  GameObjectManager.h  ModelObject.cpp  ModelObject.h  ObjectManager.h
Source/GameObject/Character/: Character.cpp  Character.h
Source/GameObject/Projectile/: Arrow.cpp  BeamObject.cpp  BeamObject.h  FireballObject.cpp  FireballObject.h  Grenade.cpp  ParticleObject.cpp  ParticleObject.h  Projectile.cpp  Projectile.h  ProjectileManager.h  TwoHandedAxe.cpp
Source/GameObject/Props/: ChargeObject.cpp  ChargeObject.h  HealingObject.cpp  HealingObject.h  OneWayWall.cpp  OneWayWall.h  Spawner.cpp  Spawner.h  SpawnerManager.cpp  SpawnerManager.h  StairToNextFloor.cpp  StairToNextFloor.h  Teleporter.cpp  Teleporter.h  ZoneObject.cpp  ZoneObject.h
Source/Map/: CrossRoom1.cpp  CrossRoom1.h  CrossRoom2.cpp  CrossRoom2.h  DeadEndRoom.cpp  DeadEndRoom.h  DungeonData.cpp  DungeonData.h  EndRoom1.cpp  EndRoom1.h  InstancingModelManager.h  Map001.cpp  Map001BossRoomTeleport.cpp  Map001BossRoomTeleport.h  Map001Key.cpp  Map001Key.h  MapTile.cpp  MapTile.h  MapTileManager.cpp  MapTileManager.h  Passage1.cpp  Passage1.h  RoomBase.cpp  RoomBase.h  SimpleRoom1.cpp  SimpleRoom1.h
Source/Network/: OnlineController.cpp  OnlineController.h
Source/Network/TCPCommand/: TCPChat.cpp  TCPChat.h  TCPClientData.cpp  TCPClientData.h  TCPCommand.cpp  TCPCommand.h  TCPEnemy.cpp  TCPEnemy.h  TCPLogin.cpp  TCPLogin.h  TCPMatching.cpp  TCPMatching.h  TCPRoom.cpp  TCPRoom.h  TCPToken.cpp  TCPToken.h
Source/Network/UDPCommand/: UDPCommand.cpp  UDPCommand.h  UDPHit.cpp  UDPHit.h  UDPSync.cpp  UDPSync.h
Source/Scene/: Scene.cpp  Scene.h  SceneDungeon.cpp  SceneDungeon.h  SceneDungeonState.cpp  SceneDungeonState.h  SceneGame.cpp  SceneGame.h  SceneGameState.cpp  SceneGameState.h  SceneLoading.cpp  SceneManager.cpp  SceneManager.h  SceneTest.cpp  SceneTest.h  SceneTitle.cpp  SceneTitle.h  SceneTitleState.cpp  SceneTitleState.h
Source/Scene/GameLoop/: SceneCharacter_E4C.cpp  SceneCharacter_E4C.h  SceneCharacter_E4CState.cpp  SceneCharacter_E4CState.h  SceneGame_E4C.cpp  SceneGame_E4CState.h  SceneTitle_E4C.cpp  SceneTitle_E4C.h  SceneTitle_E4CState.cpp  SceneTitle_E4CState.h
Source/Scene/Stage/: Stage.cpp  Stage.h  StageManager.cpp  StageManager.h  (+2 more)
Source_old/Map/: Map001.cpp  Map001.h  Map001BossRoomTeleport.cpp  Map001BossRoomTeleport.h  Map001Key.cpp  Map001Key.h
Source_old/Scene/: SceneDungeon.cpp  SceneDungeon.h  SceneGame.cpp  SceneGameState.cpp  SceneGameState.h  SceneTitle.cpp  SceneTitleState.cpp  SceneTitleState.h
TAKOEngine/AI/: BaseState.h  StateMachine.cpp  StateMachine.h
TAKOEngine/Effects/: Effect.cpp  Effect.h  EffectManager.cpp  EffectManager.h
TAKOEngine/GUI/: Dialog.cpp  Dialog.h  UIManager.cpp  UIManager.h  Widget.h  WidgetButton.cpp  WidgetButton.h
TAKOEngine/Network/: ClientNetworkController.cpp  HostNetworkController.cpp  HttpRequest.cpp  HttpRequest.h  Network.cpp  Network.h  NetworkController.h  Socket.h  TCPSocket.cpp  TCPSocket.h  UDPSocket.cpp  UDPSocket.h  WinSock2Wrapper.h  url.h
TAKOEngine/Physics/: AABBCollider.cpp  AABBCollider.h  AttackCollider.cpp  AttackCollider.h  BoundingBoxCollider.cpp  BoundingBoxCollider.h  CapsuleCollider.cpp  CapsuleCollider.h  Collider.cpp  Collider.h  Collision.cpp  Collision.h  CollisionDataManager.cpp  CollisionDataManager.h  CollisionManager.cpp  CollisionManager.h  Liner8TreeManager.h  MapCollider.cpp  MapCollider.h  MapCollisionManager.cpp  MapCollisionManager.h  MapQuadtree.cpp  MapQuadtree.h  ModelCollider.cpp  ModelCollider.h  OBBCollider.cpp  OBBCollider.h  OctreeNode.cpp  OctreeNode.h  PlayerCollisionObject.cpp  PlayerCollisionObject.h  QuadtreeNode.cpp  QuadtreeNode.h  RigidBody.h  SphereCollider.cpp  SphereCollider.h  UnrotatedBoxCollider.cpp  UnrotatedBoxCollider.h
TAKOEngine/Rendering/: Constant.h  ConstantBuffer.h  Cylinder.cpp  Cylinder.h  DebugRenderer.cpp  DebugRenderer.h  DeferredRendering.cpp  DeferredRendering.h  Descriptor.cpp  Descriptor.h  FrameBuffer.cpp  FrameBuffer.h  FrameBufferDX12.cpp  FrameBufferDX12.h  FrameBufferManager.cpp  FrameBufferManager.h  FrameBufferTexture.cpp  FrameBufferTexture.h  FrustumCulling.cpp  FrustumCulling.h  Gizmos.cpp  Gizmos.h  GpuResourceUtils.cpp  GpuResourceUtils.h  Graphics.cpp  Graphics.h  Light.cpp  Light.h  LightManager.cpp  LightManager.h  LineRenderer.cpp  LineRenderer.h  Misc.h  Model.cpp  Model.h  ModelDX12.cpp  ModelDX12.h  ModelResource.cpp  ModelResource.h  MyRender.h  (+25 more)
TAKOEngine/Runtime/: tentacle_lib.cpp  tentacle_lib.h
TAKOEngine/Sound/: Sound.cpp  Sound.h
TAKOEngine/Tool/: AssimpImporter.cpp  AssimpImporter.h  Console.cpp  Console.h  Encode.cpp  Encode.h  GLTFImporter.cpp  GLTFImporter.h  ImGuiRenderer.cpp  ImGuiRenderer.h  Logger.cpp  Logger.h  Mathf.cpp  Mathf.h  PerlinNoise.cpp  PerlinNoise.h  Timer.h  TransformUtils.cpp  TransformUtils.h  U8Buffer.cpp  U8Buffer.h  XMFLOAT.h
TAKOEngine_old/Network/: ClientNetworkController.cpp  HostNetworkController.cpp  NetworkController.h
TAKOEngine_old/Physics/: PlayerCollisionObject.cpp  PlayerCollisionObject.h
TAKOEngine_old/Sound/: Audio.h
(+440 files in other folders)
